# taller-c

./: CMakeLists.txt  Ejercicio1.c  Ejercicio1.h  Ejercicio10.c  Ejercicio10.h  Ejercicio11.c  Ejercicio11.h  Ejercicio12.c  Ejercicio12.h  Ejercicio13.c  Ejercicio13.h  Ejercicio14.c  Ejercicio14.h  Ejercicio2.c  Ejercicio3.c  Ejercicio3.h  Ejercicio4.c  Ejercicio4.h  Ejercicio5.c  Ejercicio5.h  Ejercicio6.c  Ejercicio6.h  Ejercicio7.c  Ejercicio7.h  Ejercicio8.c  Ejercicio8.h  Ejercicio9.c  Ejercicio9.h  README.md  main.c
