cmake_minimum_required(VERSION 3.22.1)
project(apuntes2 C)
set(CMAKE_C_STANDARD 11)
add_executable(apuntes2 main.c 
Ejercicio1.h Ejercicio1.c Ejercicio2.h Ejercicio2.c Ejercicio3.h Ejercicio3.c Ejercicio4.h Ejercicio4.c Ejercicio5.h Ejercicio5.c
Ejercicio6.h Ejercicio6.c Ejercicio7.h Ejercicio7.c Ejercicio8.h Ejercicio8.c Ejercicio9.h Ejercicio9.c Ejercicio10.h Ejercicio10.c
Ejercicio11.h Ejercicio11.c) 
